# causal-graph-workbench

./: README.md  package-lock.json  package.json
.github/workflows/: pages.yml
apps/backend/: pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: adjustment.py  codegen.py  data_diagnostics.py  estimators.py  graph_utils.py  path_analysis.py  roles.py  validation.py
apps/backend/app/models/: schemas.py
apps/backend/app/services/: analysis_service.py
apps/backend/causal_analysis_workbench_backend.egg-info/: PKG-INFO  SOURCES.txt
apps/backend/causal_graph_workbench_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: helpers.py  test_adjustment_engine.py  test_codegen.py  test_data_diagnostics.py  test_estimators.py  test_main.py  test_node_roles.py  test_path_analysis.py  test_validation.py
apps/frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.js  vite.config.ts
apps/frontend/public/demo-projects/: simple-confounding-demo.json
apps/frontend/src/: App.test.tsx  App.tsx  main.tsx
apps/frontend/src/api/: client.test.ts  client.ts
apps/frontend/src/components/: BuilderSidebar.tsx  CanvasWorkspace.tsx  CollapsibleSection.tsx  ExplainPanel.tsx  GraphCanvas.tsx  ResultsPanel.tsx  SectionCard.tsx  TopBar.tsx
apps/frontend/src/lib/: edgeList.test.ts  edgeList.ts  exampleProjects.ts  explainableLabel.test.ts  explainableLabel.ts  export.ts  (+6 more)
docs/: final-audit.md  requirement-matrix.md
(+3 files in other folders)
