[project]
name = "causal-graph-workbench-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "networkx>=3.4.2",
  "pydantic>=2.11.7",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "apps/backend/tests"
]

